[package]
name = "tvp-rs"
version = "0.1.0"
edition = "2021"

[env]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_ffmpeg = { version = "*", features = ["link_system_ffmpeg"] }
rsmpeg = "0.14.2"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27.0"